--- a/Editor/CMakeLists.txt
+++ b/Editor/CMakeLists.txt
@@ -1,10 +1,10 @@
-project(RaphaelEditor)
-set(CMAKE_FOLDER "Raphael/Editor")
+project(VitruveEditor)
+set(CMAKE_FOLDER "Vitruve/Editor")
 
 add_executable(${PROJECT_NAME} EditorApplication.cxx Actor/Oscillator.cxx)
 
-target_link_libraries(${PROJECT_NAME} PUBLIC RaphaelEngine imgui)
-target_precompile_headers(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/Engine/src/Engine/Raphael.hxx)
+target_link_libraries(${PROJECT_NAME} PUBLIC VitruveEngine imgui)
+target_precompile_headers(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/Engine/src/Engine/Vitruve.hxx)
 target_compile_options(
     ${PROJECT_NAME}
     PRIVATE $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:AppleClang>,$<CXX_COMPILER_ID:GNU>>:
@@ -30,12 +30,12 @@ if(MSVC)
     set_target_properties(${PROJECT_NAME} PROPERTIES WIN32_EXECUTABLE TRUE)
 endif()
 
-if(RPH_ENABLE_PROFILING)
-    target_compile_definitions(${PROJECT_NAME} PUBLIC RPH_ENABLE_PROFILING=1)
-    if(RPH_ENABLE_MEMORY_PROFILING)
-        target_compile_definitions(${PROJECT_NAME} PUBLIC RPH_ENABLE_MEMORY_PROFILING=1)
-    endif(RPH_ENABLE_MEMORY_PROFILING)
+if(VIT_ENABLE_PROFILING)
+    target_compile_definitions(${PROJECT_NAME} PUBLIC VIT_ENABLE_PROFILING=1)
+    if(VIT_ENABLE_MEMORY_PROFILING)
+        target_compile_definitions(${PROJECT_NAME} PUBLIC VIT_ENABLE_MEMORY_PROFILING=1)
+    endif(VIT_ENABLE_MEMORY_PROFILING)
     target_link_libraries(${PROJECT_NAME} PUBLIC Tracy::TracyClient)
-endif(RPH_ENABLE_PROFILING)
+endif(VIT_ENABLE_PROFILING)
 
 # target_generate_debug_file(${PROJECT_NAME})
