--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.31)
-project(Raphael)
+project(Vitruve)
 
 option(BUILD_TESTING "Build the unit tests" ON)
 
@@ -12,8 +12,8 @@ include(cmake/StripDebugFile.cmake)
 include(cmake/disable_rtti.cmake)
 
 # Option to force colored output of the compiler
-option(RPH_FORCE_COLORED_OUTPUT "Always produce ANSI-colored output (GNU/Clang only)." TRUE)
-if(RPH_FORCE_COLORED_OUTPUT)
+option(VIT_FORCE_COLORED_OUTPUT "Always produce ANSI-colored output (GNU/Clang only)." TRUE)
+if(VIT_FORCE_COLORED_OUTPUT)
     if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
         add_compile_options(-fdiagnostics-color=always)
     elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
@@ -21,11 +21,11 @@ if(RPH_FORCE_COLORED_OUTPUT)
     endif()
 endif()
 
-option(RPH_ENABLE_ASAN "Enable AddressSanitizer" OFF)
-if (RPH_ENABLE_ASAN)
+option(VIT_ENABLE_ASAN "Enable AddressSanitizer" OFF)
+if(VIT_ENABLE_ASAN)
     add_compile_options(-fsanitize=address)
     add_link_options(-fsanitize=address)
-endif(RPH_ENABLE_ASAN)
+endif(VIT_ENABLE_ASAN)
 
 find_linker()
 
@@ -54,8 +54,8 @@ else()
     message(STATUS "Building without -march=native")
 endif()
 
-option(RPH_BUILD_DOCUMENTATION "Build the Doxygen documentation" OFF)
-if(RPH_BUILD_DOCUMENTATION)
+option(VIT_BUILD_DOCUMENTATION "Build the Doxygen documentation" OFF)
+if(VIT_BUILD_DOCUMENTATION)
     message(STATUS "Documentation building using Doxygen enabled")
     find_package(Doxygen)
     if(DOXYGEN_FOUND)
@@ -68,19 +68,19 @@ if(RPH_BUILD_DOCUMENTATION)
     endif()
 endif()
 
-option(RPH_ENABLE_PROFILING "Enable the profiling" OFF)
-option(RPH_ENABLE_MEMORY_PROFILING "Enable the memory profiling" OFF)
-if(RPH_ENABLE_PROFILING)
-    message(STATUS "RPH - Profiling is enabled")
+option(VIT_ENABLE_PROFILING "Enable the profiling" OFF)
+option(VIT_ENABLE_MEMORY_PROFILING "Enable the memory profiling" OFF)
+if(VIT_ENABLE_PROFILING)
+    message(STATUS "VIT - Profiling is enabled")
 
-    if(RPH_ENABLE_MEMORY_PROFILING)
-        message(STATUS "RPH - Memory profiling is enabled")
+    if(VIT_ENABLE_MEMORY_PROFILING)
+        message(STATUS "VIT - Memory profiling is enabled")
     else()
-        message(STATUS "RPH - Memory profiling is disabled")
-    endif(RPH_ENABLE_MEMORY_PROFILING)
+        message(STATUS "VIT - Memory profiling is disabled")
+    endif(VIT_ENABLE_MEMORY_PROFILING)
 else()
-    message(STATUS "RPH - Profiling is disabled")
-endif(RPH_ENABLE_PROFILING)
+    message(STATUS "VIT - Profiling is disabled")
+endif(VIT_ENABLE_PROFILING)
 
 add_subdirectory(External/)
 add_subdirectory(Engine/)
