--- a/RHI/Vulkan/CMakeLists.txt
+++ b/RHI/Vulkan/CMakeLists.txt
@@ -13,62 +13,30 @@ file(
     ${CMAKE_CURRENT_SOURCE_DIR}/src/VulkanRHI/RenderPass/*.cxx
 )
 
-add_library(
-    ${PROJECT_NAME} STATIC EXCLUDE_FROM_ALL ${VULKAN_RENDERER_FILES} # Compile the imgui vulkan backend
-    # ${CMAKE_SOURCE_DIR}/External/imgui/backends/imgui_impl_vulkan.cpp
-)
-target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
-target_precompile_headers(${PROJECT_NAME} PRIVATE VulkanRHI.pch.hxx)
-target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_23)
-target_link_libraries(
-    ${PROJECT_NAME}
-    PRIVATE imgui
-            spirv-cross-core
-            shaderc
-            VulkanMemoryAllocator
-            Vulkan::UtilityHeaders
-            Vulkan::Headers
-)
-target_link_libraries(${PROJECT_NAME} PUBLIC VitruveEngine)
-target_disable_rtti(${PROJECT_NAME})
+# add_library( ${PROJECT_NAME} STATIC EXCLUDE_FROM_ALL ${VULKAN_RENDERER_FILES} # Compile the imgui vulkan backend #
+# ${CMAKE_SOURCE_DIR}/External/imgui/backends/imgui_impl_vulkan.cpp ) target_include_directories(${PROJECT_NAME} PRIVATE
+# ${CMAKE_CURRENT_SOURCE_DIR}/src) target_precompile_headers(${PROJECT_NAME} PRIVATE VulkanRHI.pch.hxx)
+# target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_23) target_link_libraries( ${PROJECT_NAME} PRIVATE imgui
+# spirv-cross-core shaderc VulkanMemoryAllocator Vulkan::UtilityHeaders Vulkan::Headers )
+# target_link_libraries(${PROJECT_NAME} PUBLIC VitruveEngine) target_disable_rtti(${PROJECT_NAME})
 
-target_compile_options(
-    ${PROJECT_NAME}
-    PRIVATE $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:AppleClang>,$<CXX_COMPILER_ID:GNU>>:
-            -Wall
-            -Wextra
-            -Wno-missing-field-initializers>
-            $<$<CXX_COMPILER_ID:MSVC>:
-            /Zc:preprocessor
-            /W4
-            /wd4267 # conversion from 'size_t' to 'T', possible loss of data
-            /wd4244 # conversion from 'T' to 'T', possible loss of data
-            /wd4201 # unamed union
-            /wd4324 # structure was padded due to alignment specifier
-            /wd4702 # unreachable code
-            /wd5030> # unknown attribute
-)
+# target_compile_options( ${PROJECT_NAME} PRIVATE
+# $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:AppleClang>,$<CXX_COMPILER_ID:GNU>>: -Wall -Wextra
+# -Wno-missing-field-initializers> $<$<CXX_COMPILER_ID:MSVC>: /Zc:preprocessor /W4 /wd4267 # conversion from 'size_t' to
+# 'T', possible loss of data /wd4244 # conversion from 'T' to 'T', possible loss of data /wd4201 # unamed union /wd4324
+# # structure was padded due to alignment specifier /wd4702 # unreachable code /wd5030> # unknown attribute )
 
-target_compile_definitions(${PROJECT_NAME} PUBLIC IMGUI_IMPL_VULKAN_NO_PROTOTYPES=1)
-if(VIT_ENABLE_VULKAN_DEBUGGING)
-    target_compile_definitions(${PROJECT_NAME} PUBLIC VULKAN_DEBUGGING_ENABLED=1)
-endif()
+# target_compile_definitions(${PROJECT_NAME} PUBLIC IMGUI_IMPL_VULKAN_NO_PROTOTYPES=1) if(VIT_ENABLE_VULKAN_DEBUGGING)
+# target_compile_definitions(${PROJECT_NAME} PUBLIC VULKAN_DEBUGGING_ENABLED=1) endif()
 
-if(OPTIMIZE_FOR_NATIVE)
-    target_compile_options(${PROJECT_NAME} PUBLIC -march=native)
-endif(OPTIMIZE_FOR_NATIVE)
+# if(OPTIMIZE_FOR_NATIVE) target_compile_options(${PROJECT_NAME} PUBLIC -march=native) endif(OPTIMIZE_FOR_NATIVE)
 
-build_tests(${PROJECT_NAME} tests/ShaderCompiler.cxx)
-# Give the tests access to the RHI headers
-target_include_directories(${PROJECT_NAME}_Test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
-target_precompile_headers(${PROJECT_NAME}_Test PRIVATE VulkanRHI.pch.hxx)
-target_link_libraries(${PROJECT_NAME}_Test PRIVATE Vulkan::Headers)
-target_compile_definitions(${PROJECT_NAME}_Test PRIVATE VK_NO_PROTOTYPES=1)
+# build_tests(${PROJECT_NAME} tests/ShaderCompiler.cxx) # Give the tests access to the RHI headers
+# target_include_directories(${PROJECT_NAME}_Test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
+# target_precompile_headers(${PROJECT_NAME}_Test PRIVATE VulkanRHI.pch.hxx) target_link_libraries(${PROJECT_NAME}_Test
+# PRIVATE Vulkan::Headers) target_compile_definitions(${PROJECT_NAME}_Test PRIVATE VK_NO_PROTOTYPES=1)
 
-if(VIT_ENABLE_PROFILING)
-    target_compile_definitions(${PROJECT_NAME} PUBLIC VIT_ENABLE_PROFILING=1)
-    if(VIT_ENABLE_MEMORY_PROFILING)
-        target_compile_definitions(${PROJECT_NAME} PUBLIC VIT_ENABLE_MEMORY_PROFILING=1)
-    endif(VIT_ENABLE_MEMORY_PROFILING)
-    target_link_libraries(${PROJECT_NAME} PUBLIC Tracy::TracyClient)
-endif(VIT_ENABLE_PROFILING)
+# if(VIT_ENABLE_PROFILING) target_compile_definitions(${PROJECT_NAME} PUBLIC VIT_ENABLE_PROFILING=1)
+# if(VIT_ENABLE_MEMORY_PROFILING) target_compile_definitions(${PROJECT_NAME} PUBLIC VIT_ENABLE_MEMORY_PROFILING=1)
+# endif(VIT_ENABLE_MEMORY_PROFILING) target_link_libraries(${PROJECT_NAME} PUBLIC Tracy::TracyClient)
+# endif(VIT_ENABLE_PROFILING)
