fix(VulkanRHi): hide the symbols for the rhi too

--- a/RHI/Vulkan/CMakeLists.txt
+++ b/RHI/Vulkan/CMakeLists.txt
@@ -40,6 +40,7 @@ target_link_libraries(
             Vulkan::UtilityHeaders
             Vulkan::Headers
 )
+set_target_properties(${PROJECT_NAME} PROPERTIES CXX_VISIBILITY_PRESET hidden VISIBILITY_INLINES_HIDDEN 1)
 target_link_libraries(${PROJECT_NAME} PUBLIC VitruveEngine)
 target_disable_rtti(${PROJECT_NAME})
 
